internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-metrics-stat.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /first:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /first
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: httproute-1
                          namespace: default
                  name: first-route
                  route:
                    cluster: first-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
                  statPrefix: route=/first,kind=HTTPRoute,ns=default,name=httproute-1
            /second:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /second
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: httproute-2
                          namespace: default
                  name: second-route
                  route:
                    cluster: second-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
                  statPrefix: route=/second,kind=HTTPRoute,ns=default,name=httproute-2
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /first/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /first
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: httproute-1
                              namespace: default
                      name: first-route
                      route:
                        cluster: first-route-dest
                        upgradeConfigs:
                        - upgradeType: websocket
                      statPrefix: route=/first,kind=HTTPRoute,ns=default,name=httproute-1
                /second/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /second
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: httproute-2
                              namespace: default
                      name: second-route
                      route:
                        cluster: second-route-dest
                        upgradeConfigs:
                        - upgradeType: websocket
                      statPrefix: route=/second,kind=HTTPRoute,ns=default,name=httproute-2
    name: first-listener/*
